# meshdataset-fixer

./: .env.template  README.md  error.txt  fixdata.py  pyproject.toml
src/: converter.py  transforms.py  utils.py
